data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_831.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\94\80\80\80\00\01\03\65\6e\76\0c\69\6d"
    "\70\6f\72\74\65\64\46\75\6e\63\00\00\03\84\80\80"
    "\80\00\03\00\00\00\0a\a2\80\80\80\00\03\86\80\80"
    "\80\00\00\01\10\00\01\0b\86\80\80\80\00\00\01\10"
    "\01\01\0b\86\80\80\80\00\00\01\10\02\01\0b"
  )
""
)